--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,59 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-title{
+    font-size: 2.8rem;
+    color: #131313;
+    font-weight: 700; 
+}
+
+nav > ul{
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+nav li a {
+    text-decoration: none;
+    color: #424242;
+}
+
+/* banner Styles */
+ .banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+ }
+
+ .banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+    color: #131313;
+ }
+
+ .banner-des{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400; 
+ }
+
+ .primary-btn{
+    
+ }
