--- a/styles/style.css
+++ b/styles/style.css
@@ -2,24 +2,35 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-header{
+.primary-btn {
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    font-size: 1.3rem;
+    color: #fff;
+    font-weight: 400;
+    cursor: pointer;
+    border: 0;
+}
+
+header {
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav-title{
+.nav-title {
     font-size: 2.8rem;
     color: #131313;
-    font-weight: 700; 
+    font-weight: 700;
 }
 
-nav > ul{
+nav>ul {
     display: flex;
 }
 
@@ -36,24 +47,51 @@ nav li a {
 }
 
 /* banner Styles */
- .banner-content{
+.banner-content {
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
- }
+}
 
- .banner-title{
+.banner-title {
     font-size: 4rem;
     font-weight: 700;
     color: #131313;
- }
+}
 
- .banner-des{
+.banner-des {
     color: #727272;
     font-size: 1rem;
-    font-weight: 400; 
- }
+    font-weight: 400;
+}
 
- .primary-btn{
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive media queries for mobile devices*/
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+}
+
+/* responsive media queries for tablet*/
+@media screen and (min-width: 577px) and (max-width: 992px) {
+
+    nav{
+        flex-direction: column;
+    };
+
+    header {
+        padding: 50px
+    }
     
- }
+}
+
