--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,51 @@ nav li a {
     width: 100%;
 }
 
+/* main style */
+main {
+    width: 1440px;
+    margin: 0 auto;
+}
+
+/* feature container */
+.feature-container{
+    display: flex;
+    align-items: center;
+}
+
+.feature-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.3rem;
+}
+
+.feature-content{
+    padding-right: 200px;
+    padding-left: 70px;
+}
+
+.feature-title .feature-title-span1{
+    color: #727272;
+    font-size: 2.6rem;
+    font-weight: 500; 
+}
+
+.feature-title .feature-title-span2{
+    color: 131313;
+    font-size: 2.6rem;
+    font-weight: 700; 
+}
+
+.feature-title .feature-title-span3{
+    color: #FF900E;
+    font-size: 2.6rem;
+    font-weight: 700; 
+}
+
+.feature-des{
+    color: #727272;
+    font-weight: 400; 
+}
 /* responsive media queries for mobile devices*/
 
 @media screen and (max-width: 576px) {
