--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ nav li a {
     font-weight: 400;
 }
 
-.banner img{
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
@@ -79,13 +79,13 @@ main {
 }
 
 /* feature container */
-.feature-container{
+.feature-container {
     display: flex;
     align-items: center;
 
 }
 
-.feature-img-container{
+.feature-img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
@@ -93,33 +93,55 @@ main {
 }
 
 
-.feature-content{
+.feature-content {
     padding-right: 70px;
     padding-left: 70px;
 }
 
-.feature-title .feature-title-span1{
+.feature-title .feature-title-span1 {
     color: #727272;
     font-size: 2.6rem;
-    font-weight: 500; 
+    font-weight: 500;
 }
 
-.feature-title .feature-title-span2{
+.feature-title .feature-title-span2 {
     color: 131313;
     font-size: 2.6rem;
-    font-weight: 700; 
+    font-weight: 700;
 }
 
-.feature-title .feature-title-span3{
+.feature-title .feature-title-span3 {
     color: #FF900E;
     font-size: 2.6rem;
-    font-weight: 700; 
+    font-weight: 700;
 }
 
-.feature-des{
+.feature-des {
     color: #727272;
-    font-weight: 400; 
+    font-weight: 400;
 }
+
+/* facts styles */
+.facts {
+    margin-left: 70px;
+}
+
+.facts-content {
+    max-width: 542px;
+    ;
+}
+
+.facts-title {
+    color: #131313;
+    font-size: 2.6rem;
+    font-weight: 700;
+}
+
+.facts-des {
+    color: #727272;
+    font-weight: 400;
+}
+
 /* responsive media queries for mobile devices*/
 
 @media screen and (max-width: 576px) {
@@ -128,11 +150,11 @@ main {
     }
 
     nav,
-    .feature-container
-    {
+    .feature-container {
         flex-direction: column;
     }
-    .feature-img-container{
+
+    .feature-img-container {
         grid-template-columns: 1fr;
         padding-right: 20px;
     }
@@ -142,16 +164,14 @@ main {
 @media screen and (min-width: 577px) and (max-width: 992px) {
 
     nav,
-    .feature-container
-    {
+    .feature-container {
         flex-direction: column;
-    };
+    }
 
     header {
         padding: 50px
     }
 
-    
-    
-}
 
+
+}
