--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,32 @@ main {
     font-weight: 400;
 }
 
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    min-width:  120px;
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px ;
+}
+
+.facts-card-container .card-stats {
+    color: #424242;
+    font-size: 2.8 rem;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.facts-card-container .card-title {
+    color: #727272;
+    font-weight: 600;
+    margin-top: 5px;
+}
+
 /* responsive media queries for mobile devices*/
 
 @media screen and (max-width: 576px) {
