--- a/styles/style.css
+++ b/styles/style.css
@@ -148,11 +148,11 @@ main {
 }
 
 .facts-card-container .card {
-    min-width:  120px;
+    min-width: 120px;
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
-    padding: 30px ;
+    padding: 30px;
 }
 
 .facts-card-container .card-stats {
@@ -168,6 +168,8 @@ main {
     margin-top: 5px;
 }
 
+/* sponsors Section */
+
 /* responsive media queries for mobile devices*/
 
 @media screen and (max-width: 576px) {
@@ -176,13 +178,26 @@ main {
     }
 
     nav,
-    .feature-container {
+    .feature-container ,
+    .facts-card-container
+    {
         flex-direction: column;
     }
 
     .feature-img-container {
         grid-template-columns: 1fr;
         padding-right: 20px;
+    }
+
+    .feature-content
+    .facts-card-container
+     {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+
+    .facts-card-container{
+        gap: 20px;
     }
 }
 
