--- a/styles/style.css
+++ b/styles/style.css
@@ -170,6 +170,33 @@ main {
 
 /* sponsors Section */
 
+.sponsor {
+    text-align: center;
+}
+
+.sponsor-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.sponsor-des {
+    color: #727272;
+    font-weight: 400;
+}
+
+.sponsor-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsor-img-container img{
+    width: 165px;
+}
+
 /* responsive media queries for mobile devices*/
 
 @media screen and (max-width: 576px) {
@@ -178,8 +205,9 @@ main {
     }
 
     nav,
-    .feature-container ,
-    .facts-card-container
+    .feature-container,
+    .facts-card-container,
+    .sponsor-img-container 
     {
         flex-direction: column;
     }
@@ -189,28 +217,35 @@ main {
         padding-right: 20px;
     }
 
-    .feature-content
-    .facts-card-container
-     {
+    .feature-content .facts-card-container {
         padding-right: 20px;
         padding-left: 20px;
     }
 
-    .facts-card-container{
+    .facts-card-container {
         gap: 20px;
     }
+
+    
 }
 
 /* responsive media queries for tablet*/
 @media screen and (min-width: 577px) and (max-width: 992px) {
 
     nav,
-    .feature-container {
+    .feature-container,
+    .sponsor-img-container, 
+    .facts-card-container
+     {
         flex-direction: column;
     }
 
     header {
         padding: 50px
+    }
+    
+    .facts-card-container {
+        gap: 20px;
     }
 
 
