--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,65 @@ main {
     font-weight: 400;
 }
 
+/* services styles */
+
+.services {
+    margin-top: 130px;
+    display: flex;
+    gap: 80px;
+}
+
+.service-card {
+    padding: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+
+.service-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+    border-left: 5px solid #ff900E;
+    padding-left: 20px;
+}
+
+
+
+.service-des {
+    color: #727272;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.service-card-title {
+    color: #131313;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.service-card-des {
+    color: #727272;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 45px 42jpx
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 70px;
+}
+
 /* facts styles */
 .facts {
     margin-left: 70px;
